# mss-saliency

./: CMakeLists.txt  README.md
src/: SaliencyDetector.cpp  SymmetricSurroundSaliency.cpp  SymmetricSurroundSaliency.h
